--- a/mover.cli/mover.cli.csproj
+++ b/mover.cli/mover.cli.csproj
@@ -6,8 +6,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
-		<Product>...</Product>
-	    <AssemblyTitle>...</AssemblyTitle>
+		<Product>Mouse Mover</Product>
+	    <AssemblyTitle>Mouse Mover GUI</AssemblyTitle>
 	    <Version>0.0.0</Version>
 		<Authors>Peter Hraško</Authors>
 		<Company>Open source community</Company>
