--- a/mover.gui/mover.gui.csproj
+++ b/mover.gui/mover.gui.csproj
@@ -32,7 +32,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="nulastudio.NetBeauty" Version="2.1.3.3" />
+<!--		<PackageReference Include="nulastudio.NetBeauty" Version="2.1.3.3" /> -->
 		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="7.0.4">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -48,10 +48,10 @@
 		<PackageReference Include="Avalonia" Version="11.0.4" />
 		<PackageReference Include="Avalonia.Desktop" Version="11.0.4" />
 		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.4" />
+		<PackageReference Include="Avalonia.Themes.Simple" Version="11.0.4" />
 		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.4" />
 		<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
 		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.4" />
-		<PackageReference Include="Avalonia.Themes.Simple" Version="11.0.4" />
 	</ItemGroup>
 
 	<ItemGroup>
