--- a/mover.cli/mover.cli.csproj
+++ b/mover.cli/mover.cli.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<RuntimeIdentifiers>win;win-arm64;win-x64;win-x86</RuntimeIdentifiers>
 
 		<Product>Mouse Mover</Product>
 	    <AssemblyTitle>Mouse Mover GUI</AssemblyTitle>
